src/objects/Child_Record_Question__c.object
<CustomObject>
    <description>This object will be utilised by the &quot;Add Another&quot; pattern.</description>
    <fields>
        <fullName>Application_Question__c</fullName>
        <description>This is the question number that we will be creating the objects under.</description>
        <label>Application Question</label>
        <referenceTo>Application_Question__c</referenceTo>
        <relationshipLabel>Child Record Questions</relationshipLabel>
        <relationshipName>Child_Record_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Character_Word_Assistance__c</fullName>
        <label>Character / Word Assistance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Display_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Display Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>This is the field we will be populating.</description>
        <inlineHelpText>This is the field we will be populating.</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Number_To_Display_On__c</fullName>
        <description>This will be used to define which page number this field will show on. If blank, it will not be displayed, but may be needed</description>
        <inlineHelpText>This will be used to define which page number this field will show on, but may be needed</inlineHelpText>
        <label>Page Number To Display On</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pages_for_Add_Another__c</fullName>
        <label>Pages for Add Another</label>
        <summarizedField>Child_of_a_Child_Record_Question__c.Page_Number_To_Display_On__c</summarizedField>
        <summaryForeignKey>Child_of_a_Child_Record_Question__c.Child_Record_Question__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Question_Data_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtext__c</fullName>
        <label>Subtext</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Question_Label__c</fullName>
        <label>Summary Question Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Child Record Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Question__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Number__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Page_Number_To_Display_On__c</columns>
        <columns>Help_Text__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRQ-{00000000}</displayFormat>
        <label>Child Record Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Record Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>